# funcperm-rs

./: CHANGELOG.md  Cargo.toml  README.md
benches/: bench.rs
src/: lib.rs  murmur.rs
tests/: test_murmur.rs  test_statistical.rs
