[package]
name = "funcperm"
version = "0.2.1"
edition = "2024"
description = "Cycle-walking functional permutations on [0..n)"
license = "Apache-2.0 OR LGPL-2.1-or-later"
repository = "https://github.com/vigna/funcperm-rs"
authors = ["Sebastiano Vigna <sebastiano.vigna@unimi.it>"]
readme = "README.md"
keywords = ["permutation", "hash", "bijection", "no-std"]
categories = ["no-std", "algorithms"]
rust-version = "1.85"

[dependencies]
clap = { version = "4", features = ["derive"], optional = true }
rand = { version = "0.10", optional = true }
rayon = { version = "1", optional = true }
getrandom = { version = "0.4", optional = true }

[features]
optimize = ["dep:clap", "dep:rand", "dep:rayon", "dep:getrandom"]

[[bin]]
name = "optimize"
required-features = ["optimize"]

[dev-dependencies]
rand = "0.10.0"
criterion = { version = "0.7", features = ["html_reports"] }
statrs = "0.18"
anyhow = "1"

[[bench]]
name = "bench"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
overflow-checks = false
debug = true
debug-assertions = false
codegen-units = 1
